# cobuild-final

./: .env.sample  README.md  compose.yml  justfile
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/: crud.py  models.py  prep_backend.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: f5b6c24ee2ab_first_migrations.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: login.py  private.py  users.py  utils.py
backend/app/core/: config.py  db.py  security.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: catchall.tsx  entry.client.tsx  main.tsx  root.tsx  routes.ts  routes.tsx
frontend/src/components/: footer.tsx  navbar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/layouts/: dashboard.tsx
frontend/src/pages/: home.tsx
frontend/src/pages/auth/: login.tsx
frontend/src/pages/dashboard/: index.tsx
frontend/src/services/: AuthService.ts
frontend/src/types/: ModelTypes.ts
frontend/src/utils/: client.ts  httpClient.ts  requireUser.ts
