[project]
name = "cobuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "bcrypt>=4.2.1",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi[standard]>=0.115.6",
    "jinja2>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "sentry-sdk[fastapi]>=2.20.0",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "types-passlib>=1.7.7.20241221",
]
